...
                    fontWeight: "bold",
                    letterSpacing: 0.5,
                    marginBottom: 8,
                    color: colores.textoOscuro,
                  }}
                >
                  EFECTIVO
                </Text>
                <Text
                  style={{
                    fontSize: 24,
                    fontWeight: "bold",
                    color: colores.textoOscuro,
...
