...
                  <Text style={estilos.tituloDetalle}>
                    <FontAwesome5 name="user" /> Información del Cliente
                  </Text>
                  <View style={{ flexDirection: "row" }}>
                    <View style={{ flex: 1 }}>
                      <Text style={estilos.txtLabel}>
                        Nombre:{" "}
                        <Text style={estilos.txtData}>
                          {pagoViendo.nombre_negocio}
                        </Text>
                      </Text>
                      <Text style={estilos.txtLabel}>
                        Usuario:{" "}
...
                </Text>
              </TouchableOpacity>
              <TouchableOpacity
                style={[estilos.btnPrincipal, { flex: 1 }]}
                onPress={guardarUsuario}
              >
                <Text style={estilos.btnTexto}>Guardar</Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </Modal>
    </ScrollView>
...
