...
                  ? estilos.textoSelector
                  : estilos.placeholderSelector
              }
            >
              {productoSeleccionado
                ? productoSeleccionado.nombre
                : "Seleccionar Producto..."}
            </Text>
            <FontAwesome5
              name={desplegableAbierto ? "chevron-up" : "chevron-down"}
              size={16}
              color={colores.textoGris}
            />
...

          {/* DESPLEGABLE DE PRODUCTOS */}
          {desplegableAbierto && (
            <View style={estilos.dropdown}>
              <TextInput
                style={estilos.inputBusqueda}
                placeholder="Buscar producto..."
                placeholderTextColor={colores.textoGris}
                value={busquedaProducto}
                onChangeText={setBusquedaProducto}
              />
              <ScrollView style={{ maxHeight: 200 }} nestedScrollEnabled>
                {cargando ? (
...
                      estilos.textoTipo,
                      tipo === "ajuste_entrada"
                        ? { color: colores.textoOscuro }
                        : { color: colores.textoGris },
                    ]}
                  >
                    Entrada
                  </Text>
                </TouchableOpacity>
                <TouchableOpacity
                  style={[
                    estilos.opcionTipo,
                    tipo === "ajuste_salida" && estilos.tipoSalidaActivo,
...
                  </Text>
                </TouchableOpacity>
              </View>
            </View>

            <View style={{ flex: 1 }}>
              <Text style={estilos.label}>Cantidad</Text>
              <TextInput
                style={estilos.input}
                keyboardType="numeric"
                value={cantidad}
                onChangeText={setCantidad}
                placeholder="0"
                placeholderTextColor={colores.textoGris}
              />
            </View>
          </View>

          <Text style={estilos.label}>Motivo / Razón</Text>
          <TextInput
            style={estilos.input}
            value={motivo}
            onChangeText={setMotivo}
            placeholder="Ej. Compra, Merma, Error..."
            placeholderTextColor={colores.textoGris}
...
                  estilos.textoBotonRegistrar,
                  tipo === "ajuste_entrada"
                    ? { color: colores.textoOscuro }
                    : { color: colores.textoBlanco },
                ]}
              >
                REGISTRAR MOVIMIENTO
              </Text>
            )}
          </TouchableOpacity>
        </View>

        {/* --- HISTORIAL / KARDEX --- */}
...
