...
                />
              </TouchableOpacity>
            </View>
            <Text style={estilos.label}>Nombre</Text>
            <TextInput
              style={estilos.input}
              placeholder="Ej: Electrónica"
              placeholderTextColor={colores.textoGris}
              value={nombreCategoria}
              onChangeText={setNombreCategoria}
              autoFocus
            />
            <TouchableOpacity
...
              activeOpacity={0.8}
            >
              {guardando ? (
                <ActivityIndicator color={colores.textoOscuro} />
              ) : (
                <Text style={estilos.textoBotonGuardar}>
                  {categoriaEditando ? "Guardar Cambios" : "Crear Categoría"}
                </Text>
              )}
            </TouchableOpacity>
          </View>
        </View>
      </Modal>
...
